[project]
name = "refit-utime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "numpy>=2.2.3",
    "polars>=1.23.0",
    "pytorch-lightning>=2.5.0.post0",
    "torch>=2.6.0",
    "torchviz>=0.0.3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
